This ChangeLog describes the important changes of each svn commit.

r1428 (2010-09-12):

- Implement the new version of the class PickableItem.

r1427 (2010-09-12):

- Implement the new version of the class Equipment.

r1426 (2010-09-12):

- Implement the class ItemProperties.

r1425 (2010-09-12):

- Move the item descriptions in a separate file items.dat.
- Add the interface of class ItemProperties.

r1424 (2010-09-10):

- Upgrade all existing maps of zsdx to respect the new syntax of chests, shop items,
pickable items, enemies and destructible items.

r1423 (2010-09-10):

- Change the syntax of pickable items and entities that depend on them
(enemies and destructible items). Now, all entities that can contain a
treasure (chests, shop items, pickable items, enemies and destructible
items) use the same unified syntax. This syntax is the one that describes a treasure: an item name,
a variant and a savegame variable. The existing maps will need to be upgraded.

r1421 (2010-09-09):

- Remove enumeration InventoryItemId (the hardcoded list of inventory items).
- Remove the amount parameter of treasures. The variant gives enough
information. This makes new changes to the Lua API:

Function removed:

give_treasure_with_amount

Functions whose parameters have changed (to make them coherent with 
treasure_give):

event_treasure_obtaining
event_treasure_obtained

The existing scripts will need to be updated.

r1420 (2010-09-09):

- New function in the Lua API:
  equipment_set_ability(ability_name, level)
- Update dialogs and strings related to items and treasures

r1419 (2010-09-08):

- Update the inventory subscreen for the new item system.
Each item image is now defined as the sprite hud/inventory_item, with the
animation and direction determined by its name and variant.

r1418 (2010-09-08):

- Update all existing Lua scripts to match the new API.
- New functions in the Lua API:
  equipment_has_ability(ability_name)
  equipment_has_item(item_name)